--- a/less/index.less
+++ b/less/index.less
@@ -4,56 +4,207 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html, body {
-	height: 100%;
+html,
+body {
+  height: 100%;
+}
+// MY CODE STARTS HERE MY CODE STARTS HERE MY CODE STARTS HERE MY CODE STARTS HERE MY CODE STARTS HERE
+// MY CODE STARTS HERE MY CODE STARTS HERE MY CODE STARTS HERE MY CODE STARTS HERE MY CODE STARTS HERE
+@import url('https://fonts.googleapis.com/css?family=IM+Fell+English+SC&display=swap');
+//imported gogle fonts
+@header-font: 'IM Fell English SC', serif;
+html {
+  font-size: 62.5%;
 }
 
+* {
+  border: 1px solid grey;
+}
+
+.nav-box {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 8rem;
+
+  nav {
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    font-family: @header-font;
+
+    a {
+      font-size: 3rem;
+      color: white;
+      text-decoration: none;
+      text-align: center;
+      padding: 1rem;
+    }
+    #first {
+      padding-left: 2.5rem;
+      padding-right: 2rem;
+    }
+    #second {
+      border-left: 1px solid white;
+      padding-left: 4.5rem;
+      border-right: 1px solid white;
+      padding-right: 4.5rem;
+    }
+
+    #third {
+      border-right: 1px solid white;
+      padding-right: 4.5rem;
+    }
+
+    #fourth {
+      padding-right: 2.5rem;
+    }
+  }
+}
+
+#me {
+  display: flex;
+  justify-content: space-around;
+
+  h1 {
+    font-size: 10rem;
+    font-family: @header-font;
+  }
+
+  img {
+    width: 15rem;
+    height: 25rem;
+  }
+}
